# Semillero

./: readme.md
Procesamiento_Imagenes/: Image.cpp  Image.h  entregable_17_03.cpp  main.cpp  manejo_imagenes.cpp  prueba_escala_de_grises.cpp  readme.md
learn_OpenCV/: CMakeLists.txt  main.cpp  readme.md
quitar_fondo_dataset1/: main.cpp
